[project]
name = "odoo-tools"
authors = [
    {name = "Camptocamp SA", email="info@camptocamp.com"},
]
description = "Our Odoo project tools"
readme = "README.md"
keywords = ["odoo", "project"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Framework :: Odoo",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
    "invoke==2.2.0",
    "requests==2.31.0",
    "git-aggregator>=4.0",
    "git-autoshare",
    "passlib",
    "clipboard",
    "marabunta",
    "pre-commit",
    "psycopg2-binary>=2.7.6",
    "gitpython",
    "packaging",
    "pyyaml>6.0.0",
    "ruamel.yaml",
    "kaptan==0.6.0",
    "wheel",
    "cookiecutter",
    "click>=8.1",
    "towncrier",
    "importlib_resources; python_version < '3.9'",
    "bump2version",
    # Include fix for parsing editable requirements
    # https://github.com/madpah/requirements-parser/pull/85
    "requirements-parser @ https://github.com/simahawk/requirements-parser/archive/refs/heads/fix-editable.tar.gz",
    ]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/camptocamp/odoo-project-tools"
documentation = "https://github.com/camptocamp/odoo-project-tools"
repository = "https://github.com/camptocamp/odoo-project-tools"

[project.scripts]
otools-tasks = "odoo_tools.tasks.main:program.run"
otools-project = "odoo_tools.cli.project:cli"
otools-addon = "odoo_tools.cli.addon:cli"
otools-release = "odoo_tools.cli.release:cli"
otools-pending = "odoo_tools.cli.pending:cli"
otools-conversion = "odoo_tools.conversion.convert_new_img:main"

[project.optional-dependencies]
test = [
  "coverage",
  "pytest",
  "responses",
]
convert = [
  "odoorpc"
]
[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]


[tool.black]
line-length = 88
skip-string-normalization = "True"

[tool.towncrier]
directory = "changes.d"
filename = "HISTORY.rst"
template = ".towncrier-template.rst"
title_format = ""
issue_format = "{issue}"

[[tool.towncrier.type]]
directory = "feat"
name = "Features and Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "rem"
name = "Remove"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "build"
name = "Build"
showcontent = true
